--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>discord</title>
 </head>
@@ -28,6 +28,21 @@
                 </nav>
                 <button class="accedi">accedi</button>
             </div> 
+
+            <div class="payoff">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea ad eaque eius distinctio, deleniti eos ut consequuntur, itaque pariatur necessitatibus est. Est assumenda quae omnis id aperiam quod, voluptatem voluptates?
+                </p>
+                <span>
+                    <button>
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                        Scarica per mac
+                    </button>
+                </span>
+                <span>
+                    <button>Apri discord nel tuo browser</button>
+                </span>
+            </div>
         </div>
         
         <!-- jumbo -->
