--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>discord</title>
 </head>
@@ -26,7 +27,7 @@
                         <li><a href="*">Assistenza</a></li>
                     </ul>
                 </nav>
-                <button class="accedi">accedi</button>
+                <button id="accedi" class="bottone">accedi</button>
             </div> 
 
             <div class="payoff">
@@ -34,7 +35,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea ad eaque eius distinctio, deleniti eos ut consequuntur, itaque pariatur necessitatibus est. Est assumenda quae omnis id aperiam quod, voluptatem voluptates?
                 </p>
                 <span>
-                    <button>
+                    <button class="bottone">
                         <i class="fas fa-long-arrow-alt-down"></i>
                         Scarica per mac
                     </button>
