--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </button>
                 </span>
                 <span>
-                    <button>Apri discord nel tuo browser</button>
+                    <button class="bottone">Apri discord nel tuo browser</button>
                 </span>
             </div>
         </div>
