--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <!-- navigazione -->
 
             <div class="container-nav">
-                <img class="logo" src="img/logo.svg" alt="">
+                <div class="logo" >
+                    <img  src="img/logo.svg" alt="">
+                </div>
                 <nav>
                     <ul>
                         <li><a href="*">Scarica</a></li>
@@ -27,7 +29,9 @@
                         <li><a href="*">Assistenza</a></li>
                     </ul>
                 </nav>
-                <button id="accedi" class="bottone">accedi</button>
+                <div >
+                    <button id="accedi" class="bottone">accedi</button>
+                </div>
             </div> 
 
             <div class="payoff">
@@ -35,7 +39,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea ad eaque eius distinctio, deleniti eos ut consequuntur, itaque pariatur necessitatibus est. Est assumenda quae omnis id aperiam quod, voluptatem voluptates?
                 </p>
                 <span>
-                    <button class="bottone">
+                    <button id="bottone-freccia" class="bottone">
                         <i class="fas fa-long-arrow-alt-down"></i>
                         Scarica per mac
                     </button>
@@ -45,11 +49,6 @@
                 </span>
             </div>
         </div>
-        
-        <!-- jumbo -->
-        <section>
-
-        </section>
 
     </header>
 
@@ -57,7 +56,16 @@
     <!-- blocco principale -->
     <main>
         <!-- sezione tipo -->
-        <section>
+        <section class="row">
+
+            <span class="tabella"><img  src="img/item1.svg" alt="tabella1"></span> 
+
+            <span class="testo">
+                <h2>Un luogo a invito con tutto lospazio per parlare</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum temporibus quibusdam aliquam rem tenetur non qui sint vel alias! Incidunt vero, modi omnis officiis perferendis quibusdam explicabo quidem aut molestiae.
+                </p>
+
+            </span>
 
         </section>
 
