--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="cntainer-domanda">
                 <h5>Pronto ad iniziare una nuova avventura?</h5> 
             </div>
-            
+
             <button id="bottone-freccia" class="bottone">
                 <i class="fas fa-long-arrow-alt-down"></i>
                 Scarica per mac
@@ -126,12 +126,82 @@
     <footer>
         <!-- parte alta -->
         <section>
-            <i class="fab fa-facebook-f"></i>
+            <div class="container-footer">
+                <div class="container-social">
+                    <h2>Il tuo posto per parlare</h2>
+
+                </div>
+                <div class="debug-nav nav-1">
+                    <nav>
+                        <ul>
+                            <li><a href="*">Prodotto</a></li>
+                            <li><a href="*">Scarica</a></li>
+                            <li><a href="*">Perchè</a></li>
+                            <li><a href="*">Sicurezza</a></li>
+                            <li><a href="*">Assistenza</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+                <div class="debug-nav  nav2">
+                    <nav>
+                        <ul>
+                            <li><a href="*">Prodotto</a></li>
+                            <li><a href="*">Scarica</a></li>
+                            <li><a href="*">Perchè</a></li>
+                            <li><a href="*">Sicurezza</a></li>
+                            <li><a href="*">Assistenza</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+                <div class="debug-nav nav3">
+                    <nav>
+                        <ul>
+                            <li><a href="*">Prodotto</a></li>
+                            <li><a href="*">Scarica</a></li>
+                            <li><a href="*">Perchè</a></li>
+                            <li><a href="*">Sicurezza</a></li>
+                            <li><a href="*">Assistenza</a></li>
+                            <li><a href="*">Prodotto</a></li>
+                            <li><a href="*">Scarica</a></li>
+                            <li><a href="*">Perchè</a></li>
+                            <li><a href="*">Sicurezza</a></li>
+                            <li><a href="*">Assistenza</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+                <div class="debug-nav nav4">
+                    <nav>
+                        <ul>
+                            <li><a href="*">Prodotto</a></li>
+                            <li><a href="*">Scarica</a></li>
+                            <li><a href="*">Perchè</a></li>
+                            <li><a href="*">Sicurezza</a></li>
+                            <li><a href="*">Assistenza</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+            </div>
+
+            <!-- <i class="fab fa-facebook-f"></i> -->
+
         </section>
 
         <!-- parte bassa -->
         <section>
-
+            <div class="logo-footer">
+                <div class="logo" >
+                    <img  src="img/logo.svg" alt="">
+                </div>
+                
+                <div >
+                    <button id="accedi" class="bottone">Registrati</button>
+                </div>
+            </div> 
         </section>
     </footer>
 
